--- a/oa/web/list.html
+++ b/oa/web/list.html
@@ -21,7 +21,7 @@
 				<td>
 					<a href =''>删除</a>
 					<a href ='edit.html'>修改</a>
-					<a href ='detail.html'>详情</a>
+					<a href ='../../oa2/web/detail.html'>详情</a>
 				</td>
 			</tr>
 
